update to fix the integration tests failure of tomcat-jta